--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,1 @@
-# These are supported funding model platforms
-
-custom: [https://paypal.me/EcoPV?locale.x=fr_FR]
+custom: ["https://paypal.me/EcoPV?locale.x=fr_FR"]
